# MEGAPROMPT

./: .gitignore  README.md  input.txt  mp.md  pyproject.toml
prompts/: architectural_inference.txt  constraint_enforcement.txt  domain_expansion.txt  enhancement_generation.txt  expected_systems.txt  intent_drift.txt  intent_extraction.txt  project_decomposition.txt  project_intent_classification.txt  risk_analysis.txt
prompts/brainstorm/: concept_clustering.txt  idea_space_expansion.txt  idea_synthesis.txt  quality_enforcement.txt  self_critique.txt
src/megaprompt/: __init__.py
src/megaprompt/analysis/: __init__.py  enhancement_generator.py  inference.py  intent_classifier.py  intent_drift.py  pipeline.py  presence_matrix.py  report_generator.py  scanner.py  system_generator.py
src/megaprompt/assembler/: __init__.py  prompt_assembler.py
src/megaprompt/cli/: __init__.py  brainstorm_formatters.py  formatters.py  gui_app.py  gui_screens.py  gui_theme.py  interactive.py  main.py  web_command.py
src/megaprompt/core/: __init__.py  brainstorm_pipeline.py  cache.py  checkpoint.py  config.py  cost_tracker.py  gemini_client.py  llm_base.py  llm_client.py  llm_wrapper.py  logging.py  openrouter_client.py  pipeline.py  progress.py  provider_factory.py  (+4 more)
templates/: analysis_report_template.md  mega_prompt_template.md
tests/: __init__.py  test_pipeline.py  test_schemas.py
tests/fixtures/: sample_prompts.txt
webapp/: .gitignore  README.md
webapp/backend/: README.md  manage.py  requirements.txt
webapp/frontend/: package-lock.json  package.json  tailwind.config.js
(+66 files in other folders)
