[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "megaprompt"
version = "0.1.0"
description = "Transform messy human prompts into structured, deterministic mega-prompts optimized for AI execution"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "MegaPrompt Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0",
    "click>=8.0",
    "google-genai>=0.1.0; python_version>='3.10'",
    "ollama>=0.1.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
ui = [
    "customtkinter>=5.2.0",
    "pystray>=0.19.0",
    "Pillow>=10.0.0",
]

[project.scripts]
megaprompt = "megaprompt.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

